--- a/index.html
+++ b/index.html
@@ -47,18 +47,6 @@
             <section class="card" id="moon-card">
                 <h2>Fase da Lua</h2>
                 <div class="moon-content" id="moon-content">
-                    <!-- 
-                        Aqui você pode colar o código de embed/iframe 
-                        de um widget de fase lunar do site que você escolher.
-
-                        Exemplo genérico (depois você substitui a URL):
-
-                        <iframe 
-                            src="URL_DO_WIDGET_DE_FASE_LUNAR"
-                            frameborder="0"
-                            class="moon-iframe">
-                        </iframe>
-                    -->
                     <p>Espaço reservado para o widget de fase lunar.</p>
                     <p class="notes-hint">Cole aqui o código do widget do site que você preferir.</p>
                 </div>
@@ -68,50 +56,50 @@
 
     <!-- JavaScript embutido -->
     <script>
-    // Função para adicionar zero à esquerda quando necessário
+    // Função para adicionar zero à esquerda
     function pad(num) {
-        return num.toString().padStart(2, "0");
+        return (num < 10 ? "0" : "") + num;
     }
 
-    // Atualizar relógio em tempo real
+    // Atualizar relógio
     function updateClock() {
-        const now = new Date();
+        var now = new Date();
 
-        const hours = pad(now.getHours());
-        const minutes = pad(now.getMinutes());
-        const seconds = pad(now.getSeconds());
+        var hours = pad(now.getHours());
+        var minutes = pad(now.getMinutes());
+        var seconds = pad(now.getSeconds());
 
-        const day = pad(now.getDate());
-        const month = pad(now.getMonth() + 1);
-        const year = now.getFullYear();
+        var day = pad(now.getDate());
+        var month = pad(now.getMonth() + 1);
+        var year = now.getFullYear();
 
-        const clockTime = document.getElementById("clock-time");
-        const clockDate = document.getElementById("clock-date");
+        var clockTime = document.getElementById("clock-time");
+        var clockDate = document.getElementById("clock-date");
 
         if (clockTime && clockDate) {
-            clockTime.textContent = \`\${hours}:\${minutes}:\${seconds}\`;
-            clockDate.textContent = \`\${day}/\${month}/\${year}\`;
+            clockTime.textContent = hours + ":" + minutes + ":" + seconds;
+            clockDate.textContent = day + "/" + month + "/" + year;
         }
     }
 
     // Gerar calendário do mês atual
     function generateCalendar() {
-        const now = new Date();
-        const year = now.getFullYear();
-        const monthIndex = now.getMonth(); // 0–11
+        var now = new Date();
+        var year = now.getFullYear();
+        var monthIndex = now.getMonth(); // 0–11
 
-        const calendarMonth = document.getElementById("calendar-month");
-        const calendarYear = document.getElementById("calendar-year");
-        const calendarGrid = document.getElementById("calendar-grid");
+        var calendarMonth = document.getElementById("calendar-month");
+        var calendarYear = document.getElementById("calendar-year");
+        var calendarGrid = document.getElementById("calendar-grid");
 
         if (!calendarGrid || !calendarMonth || !calendarYear) return;
 
-        const monthNames = [
+        var monthNames = [
             "Janeiro", "Fevereiro", "Março", "Abril", "Maio", "Junho",
             "Julho", "Agosto", "Setembro", "Outubro", "Novembro", "Dezembro"
         ];
 
-        const weekDayNames = ["D", "S", "T", "Q", "Q", "S", "S"]; // Domingo a Sábado
+        var weekDayNames = ["D", "S", "T", "Q", "Q", "S", "S"]; // Domingo a Sábado
 
         calendarMonth.textContent = monthNames[monthIndex];
         calendarYear.textContent = year;
@@ -120,38 +108,38 @@
         calendarGrid.innerHTML = "";
 
         // Cabeçalho: nomes dos dias da semana
-        weekDayNames.forEach(dayName => {
-            const el = document.createElement("div");
-            el.classList.add("calendar-day-name");
-            el.textContent = dayName;
-            calendarGrid.appendChild(el);
-        });
+        for (var i = 0; i < weekDayNames.length; i++) {
+            var nameCell = document.createElement("div");
+            nameCell.className = "calendar-day-name";
+            nameCell.textContent = weekDayNames[i];
+            calendarGrid.appendChild(nameCell);
+        }
 
         // Primeiro dia do mês
-        const firstDay = new Date(year, monthIndex, 1);
-        const startingWeekDay = firstDay.getDay(); // 0 (domingo) - 6 (sábado)
+        var firstDay = new Date(year, monthIndex, 1);
+        var startingWeekDay = firstDay.getDay(); // 0 (domingo) - 6 (sábado)
 
         // Quantos dias tem o mês
-        const daysInMonth = new Date(year, monthIndex + 1, 0).getDate();
+        var daysInMonth = new Date(year, monthIndex + 1, 0).getDate();
 
         // Dias vazios antes do primeiro dia do mês
-        for (let i = 0; i < startingWeekDay; i++) {
-            const emptyCell = document.createElement("div");
-            emptyCell.classList.add("calendar-day", "empty");
+        for (var empty = 0; empty < startingWeekDay; empty++) {
+            var emptyCell = document.createElement("div");
+            emptyCell.className = "calendar-day empty";
             emptyCell.textContent = "";
             calendarGrid.appendChild(emptyCell);
         }
 
         // Dias do mês
-        const today = now.getDate();
+        var today = now.getDate();
 
-        for (let day = 1; day <= daysInMonth; day++) {
-            const dayCell = document.createElement("div");
-            dayCell.classList.add("calendar-day");
-            dayCell.textContent = day;
+        for (var dayNum = 1; dayNum <= daysInMonth; dayNum++) {
+            var dayCell = document.createElement("div");
+            dayCell.className = "calendar-day";
+            dayCell.textContent = dayNum;
 
-            if (day === today) {
-                dayCell.classList.add("today");
+            if (dayNum === today) {
+                dayCell.className += " today";
             }
 
             calendarGrid.appendChild(dayCell);
@@ -160,33 +148,40 @@
 
     // Bloco de notas com localStorage
     function initNotes() {
-        const notesArea = document.getElementById("notes-area");
+        var notesArea = document.getElementById("notes-area");
         if (!notesArea) return;
 
-        const STORAGE_KEY = "roxy_dashboard_notes";
+        var STORAGE_KEY = "roxy_dashboard_notes";
 
         // Carregar notas salvas
-        const savedNotes = localStorage.getItem(STORAGE_KEY);
+        var savedNotes = null;
+        try {
+            savedNotes = localStorage.getItem(STORAGE_KEY);
+        } catch (e) {
+            // Se der erro com localStorage, só ignora
+        }
+
         if (savedNotes !== null) {
             notesArea.value = savedNotes;
         }
 
         // Salvar sempre que digitar
-        notesArea.addEventListener("input", () => {
-            localStorage.setItem(STORAGE_KEY, notesArea.value);
+        notesArea.addEventListener("input", function () {
+            try {
+                localStorage.setItem(STORAGE_KEY, notesArea.value);
+            } catch (e) {
+                // Ignora se não puder salvar
+            }
         });
     }
 
     // Inicialização geral
-    document.addEventListener("DOMContentLoaded", () => {
-        // Relógio
+    document.addEventListener("DOMContentLoaded", function () {
         updateClock();
         setInterval(updateClock, 1000);
 
-        // Calendário
         generateCalendar();
 
-        // Notas
         initNotes();
     });
     </script>
