Adição de Widget de Moonphase

--- a/index.html
+++ b/index.html
@@ -40,8 +40,19 @@
             <section class="card" id="moon-card">
                 <h2>Fase da Lua</h2>
                 <div class="moon-content" id="moon-content">
-                    <p>Espaço reservado para o widget de fase lunar.</p>
-                    <p class="notes-hint">Cole aqui o código do widget do site que você preferir.</p>
+                    <script 
+                        type="text/javascript" 
+                        src="https://moonphases.co.uk/js/widget.js" 
+                        id="moonphase_widget" 
+                        widget="times" 
+                        lat="" 
+                        lng="" 
+                        date="" 
+                        tz="">
+                    </script>
+                    <p class="notes-hint">
+                        Dados da fase da lua carregados externamente de moonphases.co.uk.
+                    </p>
                 </div>
             </section>
         </main>
