Atualização de Moonphase para novo widget de monphase.guide

--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
             <section class="card" id="moon-card">
                 <h2>Fase da Lua</h2>
                 <div class="moon-content" id="moon-content">
-                    <script 
-                        type="text/javascript" 
-                        src="https://moonphases.co.uk/js/widget.js" 
-                        id="moonphase_widget" 
-                        widget="times" 
-                        lat="" 
-                        lng="" 
-                        date="" 
-                        tz="">
-                    </script>
+                    <a 
+                        class="moon-link"
+                        target="_blank"
+                        href="https://moonphase.guide/">
+                        <img 
+                            class="moon-image"
+                            src="https://moonphase.guide/module/MWTBiZTNIREJYZmxOR1FGMVAxc1lyUktyMFpmTTBjNXBJT1k1YkpEaXo0ditaMkNDQXRNK1JSY0ZYYXgyc1dndDNvVE9ueHFTam1ZOHpXMC83a1JsV25ZZmdKS2xXajU0ZlFGT3hLaHhscjA9.png" 
+                            alt="Fase atual da lua por moonphase.guide" />
+                    </a>
+
                     <p class="notes-hint">
-                        Dados da fase da lua carregados externamente de moonphases.co.uk.
+                        Fase atual da lua – imagem carregada de moonphase.guide.
                     </p>
                 </div>
             </section>
