Atualização do widget

--- a/index.html
+++ b/index.html
@@ -40,18 +40,17 @@
             <section class="card" id="moon-card">
                 <h2>Fase da Lua</h2>
                 <div class="moon-content" id="moon-content">
-                    <a 
-                        class="moon-link"
-                        target="_blank"
-                        href="https://moonphase.guide/">
+                    <a class="moon-link"
+                       target="_blank"
+                       href="https://moonphase.guide/">
                         <img 
                             class="moon-image"
-                            src="https://moonphase.guide/module/MWTBiZTNIREJYZmxOR1FGMVAxc1lyUktyMFpmTTBjNXBJT1k1YkpEaXo0ditaMkNDQXRNK1JSY0ZYYXgyc1dndDNvVE9ueHFTam1ZOHpXMC83a1JsV25ZZmdKS2xXajU0ZlFGT3hLaHhscjA9.png" 
-                            alt="Fase atual da lua por moonphase.guide" />
+                            src="https://moonphase.guide/module/MUC9hUlRpZVFSY0taQnhZK0xzUlVHdVZveFRaTXFWVDZaUmlOMU80aEM4Q3FaV2JaMlB1N0w3YnE3NFgxZFpuRG5xZHJBVjVSZFN0RmZoSWxTSDJISU9Fbk1TQkgrTEptRjAvWHNEcDB1VUk9.png" 
+                            alt="Fase atual da lua" />
                     </a>
 
                     <p class="notes-hint">
-                        Fase atual da lua – imagem carregada de moonphase.guide.
+                        Fase atual da lua – imagem de moonphase.guide.
                     </p>
                 </div>
             </section>
