--- a/index.html
+++ b/index.html
@@ -20,9 +20,21 @@
             <!-- Relógio -->
             <section class="card" id="clock-card">
                 <h2>Relógio</h2>
-                <div class="clock-time" id="clock-time">--:--:--</div>
-                <div class="clock-date" id="clock-date">--/--/----</div>
+
+                <div class="clock-main">
+                    <span id="clock-hours">--:--</span>
+                    <span id="clock-seconds">--</span>
+                </div>
+
+                <div class="clock-line"></div>
+
+                <div class="clock-meta">
+                    <span id="clock-weekday">---</span>
+                    <span class="clock-dot">•</span>
+                    <span id="clock-tagline">Fogo que cria, vento que guia</span>
+                </div>
             </section>
+
 
             <!-- Calendário -->
             <section class="card" id="calendar-card">
@@ -64,7 +76,7 @@
         return (num < 10 ? "0" : "") + num;
     }
 
-    // Atualizar relógio
+    // Atualizar relógio em modo cyber-místico
     function updateClock() {
         var now = new Date();
 
@@ -72,19 +84,34 @@
         var minutes = pad(now.getMinutes());
         var seconds = pad(now.getSeconds());
 
-        var day = pad(now.getDate());
-        var month = pad(now.getMonth() + 1);
-        var year = now.getFullYear();
+        var weekdays = [
+                "Domingo",
+            "Segunda-feira",
+            "Terça-feira",
+            "Quarta-feira",
+            "Quinta-feira",
+            "Sexta-feira",
+            "Sábado"
+        ];
 
-        var clockTime = document.getElementById("clock-time");
-        var clockDate = document.getElementById("clock-date");
+        var clockHoursEl = document.getElementById("clock-hours");
+        var clockSecondsEl = document.getElementById("clock-seconds");
+        var clockWeekdayEl = document.getElementById("clock-weekday");
 
-        if (clockTime && clockDate) {
-            clockTime.textContent = hours + ":" + minutes + ":" + seconds;
-            clockDate.textContent = day + "/" + month + "/" + year;
+        if (clockHoursEl) {
+            clockHoursEl.textContent = hours + ":" + minutes;
+        }
+
+        if (clockSecondsEl) {
+            clockSecondsEl.textContent = seconds;
+        }
+
+        if (clockWeekdayEl) {
+            clockWeekdayEl.textContent = weekdays[now.getDay()];
         }
     }
 
+        
     // Gerar calendário do mês atual
     function generateCalendar() {
         var now = new Date();
