--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Painel da Roxy – Segunda Tela</title>
 
     <!-- Arquivo de estilos -->
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
